--- a/Walle.ini
+++ b/Walle.ini
@@ -8,6 +8,7 @@
 ;苹果分流：支持
 ;增强中国IP段：支持
 ;增强国外GFW：支持
+;防DNS泄露：在漏网之鱼前一条加上no-resolve
 
 ;规则集定义
 ruleset=🎯 全球直连,https://https://raw.githubusercontent.com/Walle-Yip/Rule/refs/heads/main/Direct.list
@@ -49,7 +50,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
@@ -98,4 +99,3 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 enable_rule_generator=true
 overwrite_original_rules=true
-
